--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,13 +4,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(#555555, #2a2a2a);
+    height: 100vh;
+    background-color:#e0e0e0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .home-div {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1rem;
+    background-color: #fefefe;
+    border-radius: 0.3rem;
+    margin-bottom: 1rem;
 }
 
 p {
@@ -20,35 +23,71 @@ p {
 
 .p1 {
     margin: 0;
-    color: white;
-    font-size: 0.8rem;
+    color: #0a0a0a;
+    font-size: 0.7rem;
+}
+
+.playcons {
+  font-size: 0.8rem;
+  color: #7b7b7c;
 }
 
 .p2 {
     margin: 0;
+    // color: #8a8a8d;
     color: #b3b3b3;
     font-size: 0.7rem;
 }
 
+.circle {
+  border-radius: 100%;
+  padding: 1rem;
+  width: 3rem;
+  height: 3rem;
+  background-color: #3ad6bc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .p3 {
     margin: 0;
-    color: white;
+    color: #0a0a0a;
     font-size: 1rem;
-    font-weight: bold;
     padding-bottom: 0.3rem;
+}
+
+.p4 {
+  margin-top: 0.3rem;
+  // color: #8a8a8d;
+  color: #b3b3b3;
+  font-size: 0.6rem;
+}
+
+.songName {
+  text-transform: uppercase;
+  color: #515151;
+  font-size: 0.7rem;
 }
 
 .heart-icon-class {
     color: #C3C3C3;
 }
 
+.new-icon-class {
+  color: #3ad6bc;
+}
+
 .green-icon-class {
-    color: #65d36e;
+    color: #fefefe;
+    margin-top: 0.3rem;
+    margin-right: 0.1rem;
 }
 
 .button-class {
-    color: #65d36e;
-    margin: 1rem;
+    color: #7b7b7b;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
 button {
@@ -60,6 +99,7 @@ button {
 .titles {
     display: flex;
     flex-direction: column;
+    margin-bottom: 0.2rem;
 }
 
 .icon-right {
@@ -76,16 +116,22 @@ button {
 
 .player-class {
     width: 20rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #121212;
+    background-color: #f7f7f7;
     border-bottom-left-radius: 0.3rem;
     border-bottom-right-radius: 0.3rem;
-    border-top: 0.1rem solid #535353;
-    box-shadow: 0 4px 5px -2px rgba(0, 0, 0, .7);
+    box-shadow: 0 4px 5px -2px #b7b7b7;
+}
+
+.player-header {
+  margin-top: 0.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 1rem;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 header {
@@ -96,15 +142,15 @@ header {
     width: 20rem;
     display: flex;
     align-items: center;
-    background-color: #121212;
+    background-color: #fefefe;
 }
 
 header:hover {
-    background-color: #2a2a2a;
+    background-color: #efefef;
 }
 
 header:active {
-    background-color: #5a5a5a;
+    background-color: #e5e5e5;
 }
 
 .album-cover-div {
@@ -117,7 +163,7 @@ header:active {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(#905663, #342428);
+    background-color: #fefefe;
 }
 
 .album-info-div {
@@ -128,146 +174,42 @@ header:active {
     height: 5rem;
     display: flex;
     align-items: center;
-    background-image: linear-gradient(#342428, #121212);
+    background-color: #fefefe;
 }
 
 img {
     width: 14rem;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, .7);
-}
-
-.btn {
-    padding: 0;
+    box-shadow: 0 2px 5px #b7b7b7;
+    border-radius: 0.3rem;
 }
 
 .dropdown-menu {
-    background-color: #282828;
-    color: white;
-    font-size: 0.8rem;
+    background-color: #f5f5f5;
+    color: #fefefe;
+    font-size: 0.7rem;
+    border: 0;
+    box-shadow: 0 4px 5px -2px #b7b7b7;
 }
 
 .dropdown-item {
-    color: white;
+    color: #0a0a0a;
     padding-left: 0.9rem;
     padding-right: 0;
 }
 
 .dropdown-item:hover {
-    color: white;
-    background-color: #3e3e3e;
-  }
+    color: #0a0a0a;
+    background-color: #e3e3e3;
+}
 
-  .audio-player {
-    height: 50px;
-    width: 350px;
-    background: #444;
-    box-shadow: 0 0 20px 0 #000a;
-    font-family: arial;
-    color: white;
-    font-size: 0.75em;
-    overflow: hidden;
-    display: grid;
-    grid-template-rows: 6px auto;
-  }
-  .audio-player .timeline {
-    background: white;
-    width: 100%;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 2px 10px 0 #0008;
-  }
-  .audio-player .timeline .progress {
-    background: coral;
-    width: 0%;
-    height: 100%;
-    transition: 0.25s;
-  }
-  .audio-player .controls {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    padding: 0 20px;
-  }
-  .audio-player .controls > * {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .audio-player .controls .toggle-play.play {
-    cursor: pointer;
-    position: relative;
-    left: 0;
-    height: 0;
-    width: 0;
-    border: 7px solid #0000;
-    border-left: 13px solid white;
-  }
-  .audio-player .controls .toggle-play.play:hover {
-    transform: scale(1.1);
-  }
-  .audio-player .controls .toggle-play.pause {
-    height: 15px;
-    width: 20px;
-    cursor: pointer;
-    position: relative;
-  }
-  .audio-player .controls .toggle-play.pause:before {
-    position: absolute;
-    top: 0;
-    left: 0px;
-    background: white;
-    content: "";
-    height: 15px;
-    width: 3px;
-  }
-  .audio-player .controls .toggle-play.pause:after {
-    position: absolute;
-    top: 0;
-    right: 8px;
-    background: white;
-    content: "";
-    height: 15px;
-    width: 3px;
-  }
-  .audio-player .controls .toggle-play.pause:hover {
-    transform: scale(1.1);
-  }
-  .audio-player .controls .time {
-    display: flex;
-  }
-  .audio-player .controls .time > * {
-    padding: 2px;
-  }
-  .audio-player .controls .volume-container {
-    cursor: pointer;
-    position: relative;
-    z-index: 2;
-  }
-  .audio-player .controls .volume-container .volume-button {
-    height: 26px;
-    display: flex;
-    align-items: center;
-  }
-  .audio-player .controls .volume-container .volume-button .volume {
-    transform: scale(0.7);
-  }
-  .audio-player .controls .volume-container .volume-slider {
-    position: absolute;
-    left: -3px;
-    top: 15px;
-    z-index: -1;
-    width: 0;
-    height: 15px;
-    background: white;
-    box-shadow: 0 0 20px #000a;
-    transition: 0.25s;
-  }
-  .audio-player .controls .volume-container .volume-slider .volume-percentage {
-    background: coral;
-    height: 100%;
-    width: 75%;
-  }
-  .audio-player .controls .volume-container:hover .volume-slider {
-    left: -123px;
-    width: 120px;
-  }
+.audio-container {
+  text-align: center;
+}
+
+audio::-webkit-media-controls-panel{
+  background-color: #f7f7f7;
+  color: #fefefe;
+  width: 5rem;
+  margin: 0;
+  padding: 0;
+}
